tests/typing/fail/clock-10.stderr
error: proc macro panicked
  --> tests/typing/fail/clock-10.rs:3:1
   |
3  | / sync! {
4  | |     #![pass(1)]
5  | |
6  | |     node oui(c1 : bool, c2 : bool) = ()
...  |
11 | |         };
12 | | }
   | |_^
   |
   = help: message: not yet implemented: raise error: the false branch doesn't have the right clock
